--- a/archives/toutiao-search/2024-04-08.md
+++ b/archives/toutiao-search/2024-04-08.md
@@ -1,55 +1,72 @@
 # 2024-04-08
 
-共 285 条
+共 301 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Apr 08 2024 17:00:34 GMT+0800 (China Standard Time) -->
-1. [央媒评初中生遇害案嫌疑人被追刑责](https://so.toutiao.com/search?keyword=央媒评初中生遇害案嫌疑人被追刑责)
+<!-- 最后更新时间 Mon Apr 08 2024 18:00:59 GMT+0800 (China Standard Time) -->
 1. [南昌一公交撞上行人致3死7伤](https://so.toutiao.com/search?keyword=南昌一公交撞上行人致3死7伤)
-1. [港珠澳大桥现“春运式”景象](https://so.toutiao.com/search?keyword=港珠澳大桥现“春运式”景象)
 1. [足协所有中层干部暂时免去职务](https://so.toutiao.com/search?keyword=足协所有中层干部暂时免去职务)
+1. [港珠澳大桥现“春运式”景象](https://so.toutiao.com/search?keyword=港珠澳大桥现“春运式”景象)
+1. [网友：我倒要看看明年元旦怎么调休](https://so.toutiao.com/search?keyword=网友：我倒要看看明年元旦怎么调休)
+1. [踩商贩手的女城管被开除](https://so.toutiao.com/search?keyword=踩商贩手的女城管被开除)
 1. [浙江34岁律师遇袭身亡 系邻里纠纷](https://so.toutiao.com/search?keyword=浙江34岁律师遇袭身亡+系邻里纠纷)
-1. [拉夫罗夫抵京对中国进行正式访问](https://so.toutiao.com/search?keyword=拉夫罗夫抵京对中国进行正式访问)
+1. [砸奔驰大妈丈夫：骑电动车追3里地](https://so.toutiao.com/search?keyword=砸奔驰大妈丈夫：骑电动车追3里地)
+1. [浙大一女生23年前写的励志标语火了](https://so.toutiao.com/search?keyword=浙大一女生23年前写的励志标语火了)
+1. [4月10日将迎龙年龙月龙日龙时](https://so.toutiao.com/search?keyword=4月10日将迎龙年龙月龙日龙时)
 1. [警方通报蒜苗被轧大妈怒砸奔驰车](https://so.toutiao.com/search?keyword=警方通报蒜苗被轧大妈怒砸奔驰车)
-1. [山东一高校发生刑案致1死](https://so.toutiao.com/search?keyword=山东一高校发生刑案致1死)
-1. [海能达一字跌停](https://so.toutiao.com/search?keyword=海能达一字跌停)
-1. [英方妄称中国越来越好战 中方驳斥](https://so.toutiao.com/search?keyword=英方妄称中国越来越好战+中方驳斥)
 1. [女子在霸王茶姬脱光上衣坐柜台上](https://so.toutiao.com/search?keyword=女子在霸王茶姬脱光上衣坐柜台上)
 1. [初中生被害案嫌犯最高可判什么刑](https://so.toutiao.com/search?keyword=初中生被害案嫌犯最高可判什么刑)
 1. [网传黑车司机打乘客系7名的哥互殴](https://so.toutiao.com/search?keyword=网传黑车司机打乘客系7名的哥互殴)
-1. [飞天茅台为什么大跌](https://so.toutiao.com/search?keyword=飞天茅台为什么大跌)
-1. [妻子骗高位截瘫丈夫说送他去养老院](https://so.toutiao.com/search?keyword=妻子骗高位截瘫丈夫说送他去养老院)
+1. [山东一高校发生刑案致1死](https://so.toutiao.com/search?keyword=山东一高校发生刑案致1死)
+1. [拉夫罗夫抵京对中国进行正式访问](https://so.toutiao.com/search?keyword=拉夫罗夫抵京对中国进行正式访问)
 1. [金价暴涨房价下跌说明了什么](https://so.toutiao.com/search?keyword=金价暴涨房价下跌说明了什么)
-1. [中美财长会见 就多个议题交换意见](https://so.toutiao.com/search?keyword=中美财长会见+就多个议题交换意见)
-1. [贵州茅台回应茅台酒批价下跌](https://so.toutiao.com/search?keyword=贵州茅台回应茅台酒批价下跌)
-1. [大妈因蒜苗被轧怒砸奔驰或担刑责](https://so.toutiao.com/search?keyword=大妈因蒜苗被轧怒砸奔驰或担刑责)
-1. [泽连斯基称乌战败其他国家也会遭袭](https://so.toutiao.com/search?keyword=泽连斯基称乌战败其他国家也会遭袭)
-1. [网友吐槽五一调休：放不起就别放了](https://so.toutiao.com/search?keyword=网友吐槽五一调休：放不起就别放了)
-1. [莫斯科恐袭嫌犯供出幕后协调人](https://so.toutiao.com/search?keyword=莫斯科恐袭嫌犯供出幕后协调人)
-1. [胡锡进评初中生遇害案嫌犯被追刑责](https://so.toutiao.com/search?keyword=胡锡进评初中生遇害案嫌犯被追刑责)
-1. [陈奕迅演唱会被竖中指](https://so.toutiao.com/search?keyword=陈奕迅演唱会被竖中指)
-1. [以色列为何突然撤军](https://so.toutiao.com/search?keyword=以色列为何突然撤军)
-1. [菲律宾在南海投放特殊装置](https://so.toutiao.com/search?keyword=菲律宾在南海投放特殊装置)
-1. [河南平顶山多名执法人员与村民冲突](https://so.toutiao.com/search?keyword=河南平顶山多名执法人员与村民冲突)
+1. [节后“开门绿” A股为何又跌了](https://so.toutiao.com/search?keyword=节后“开门绿”+A股为何又跌了)
 1. [俄外长访华 中俄准备谈什么](https://so.toutiao.com/search?keyword=俄外长访华+中俄准备谈什么)
+1. [央媒评初中生遇害案嫌疑人被追刑责](https://so.toutiao.com/search?keyword=央媒评初中生遇害案嫌疑人被追刑责)
+1. [马英九参观中国人民抗日战争纪念馆](https://so.toutiao.com/search?keyword=马英九参观中国人民抗日战争纪念馆)
+1. [网友吐槽五一调休：放不起就别放了](https://so.toutiao.com/search?keyword=网友吐槽五一调休：放不起就别放了)
+1. [飞天茅台为什么大跌](https://so.toutiao.com/search?keyword=飞天茅台为什么大跌)
+1. [泽连斯基称乌战败其他国家也会遭袭](https://so.toutiao.com/search?keyword=泽连斯基称乌战败其他国家也会遭袭)
+1. [以色列为何突然撤军](https://so.toutiao.com/search?keyword=以色列为何突然撤军)
+1. [小米汽车回应SU7充电问题](https://so.toutiao.com/search?keyword=小米汽车回应SU7充电问题)
+1. [菲律宾在南海投放特殊装置](https://so.toutiao.com/search?keyword=菲律宾在南海投放特殊装置)
+1. [莫斯科恐袭嫌犯供出幕后协调人](https://so.toutiao.com/search?keyword=莫斯科恐袭嫌犯供出幕后协调人)
+1. [女生发现一在建大楼几个柱子是歪的](https://so.toutiao.com/search?keyword=女生发现一在建大楼几个柱子是歪的)
+1. [盘点历史6次黄金牛市走势](https://so.toutiao.com/search?keyword=盘点历史6次黄金牛市走势)
+1. [男子试驾劳斯莱斯获销售暖心鼓励](https://so.toutiao.com/search?keyword=男子试驾劳斯莱斯获销售暖心鼓励)
+1. [中美财长会见 就多个议题交换意见](https://so.toutiao.com/search?keyword=中美财长会见+就多个议题交换意见)
+1. [王红权星自曝在一个小区有7套房](https://so.toutiao.com/search?keyword=王红权星自曝在一个小区有7套房)
+1. [妻子骗高位截瘫丈夫说送他去养老院](https://so.toutiao.com/search?keyword=妻子骗高位截瘫丈夫说送他去养老院)
+1. [钢铁煤炭价格为何跌惨了](https://so.toutiao.com/search?keyword=钢铁煤炭价格为何跌惨了)
+1. [34岁律师遇袭身亡 2人被刑拘](https://so.toutiao.com/search?keyword=34岁律师遇袭身亡+2人被刑拘)
+1. [河南平顶山多名执法人员与村民冲突](https://so.toutiao.com/search?keyword=河南平顶山多名执法人员与村民冲突)
+1. [日本拟加入AUKUS？外交部回应](https://so.toutiao.com/search?keyword=日本拟加入AUKUS？外交部回应)
+1. [没人续缴管理费骨灰会如何处置](https://so.toutiao.com/search?keyword=没人续缴管理费骨灰会如何处置)
+1. [中方：没有兴趣和任何国家比拼军力](https://so.toutiao.com/search?keyword=中方：没有兴趣和任何国家比拼军力)
+1. [抗癌女孩刘怡去世](https://so.toutiao.com/search?keyword=抗癌女孩刘怡去世)
+1. [女子机场上厕所被6岁男孩推门闯入](https://so.toutiao.com/search?keyword=女子机场上厕所被6岁男孩推门闯入)
+1. [贵州茅台回应茅台酒批价下跌](https://so.toutiao.com/search?keyword=贵州茅台回应茅台酒批价下跌)
+1. [林更新回应《与凤行》杀青哭了](https://so.toutiao.com/search?keyword=林更新回应《与凤行》杀青哭了)
+1. [基德：欧文是世界上的最佳球员之一](https://so.toutiao.com/search?keyword=基德：欧文是世界上的最佳球员之一)
+1. [小学生“打烟牌”该不该禁](https://so.toutiao.com/search?keyword=小学生“打烟牌”该不该禁)
+1. [男子进女厕偷窥被抓 母亲怒扇巴掌](https://so.toutiao.com/search?keyword=男子进女厕偷窥被抓+母亲怒扇巴掌)
+1. [陈奕迅演唱会被竖中指](https://so.toutiao.com/search?keyword=陈奕迅演唱会被竖中指)
+1. [南昌公交事故司机当时心脏不适失去意识](https://so.toutiao.com/search?keyword=南昌公交事故司机当时心脏不适失去意识)
+1. [耶伦游览北京故宫](https://so.toutiao.com/search?keyword=耶伦游览北京故宫)
+1. [男孩家门口滑倒 爷奶直接砸掉瓷砖](https://so.toutiao.com/search?keyword=男孩家门口滑倒+爷奶直接砸掉瓷砖)
+1. [海能达一字跌停](https://so.toutiao.com/search?keyword=海能达一字跌停)
+1. [英方妄称中国越来越好战 中方驳斥](https://so.toutiao.com/search?keyword=英方妄称中国越来越好战+中方驳斥)
+1. [大妈因蒜苗被轧怒砸奔驰或担刑责](https://so.toutiao.com/search?keyword=大妈因蒜苗被轧怒砸奔驰或担刑责)
+1. [胡锡进评初中生遇害案嫌犯被追刑责](https://so.toutiao.com/search?keyword=胡锡进评初中生遇害案嫌犯被追刑责)
 1. [耶伦两次访华带火三份菜单](https://so.toutiao.com/search?keyword=耶伦两次访华带火三份菜单)
 1. [高校回应招生副科长被举报聚众淫乱](https://so.toutiao.com/search?keyword=高校回应招生副科长被举报聚众淫乱)
 1. [中国养老金最大的问题是什么](https://so.toutiao.com/search?keyword=中国养老金最大的问题是什么)
-1. [没人续缴管理费骨灰会如何处置](https://so.toutiao.com/search?keyword=没人续缴管理费骨灰会如何处置)
-1. [男子进女厕偷窥被抓 母亲怒扇巴掌](https://so.toutiao.com/search?keyword=男子进女厕偷窥被抓+母亲怒扇巴掌)
-1. [网友：我倒要看看明年元旦怎么调休](https://so.toutiao.com/search?keyword=网友：我倒要看看明年元旦怎么调休)
 1. [官方回应昆明一局长被举报婚内出轨](https://so.toutiao.com/search?keyword=官方回应昆明一局长被举报婚内出轨)
-1. [男子试驾劳斯莱斯获销售暖心鼓励](https://so.toutiao.com/search?keyword=男子试驾劳斯莱斯获销售暖心鼓励)
-1. [女生发现一在建大楼几个柱子是歪的](https://so.toutiao.com/search?keyword=女生发现一在建大楼几个柱子是歪的)
 1. [奚梦瑶当街训斥老公何猷君](https://so.toutiao.com/search?keyword=奚梦瑶当街训斥老公何猷君)
 1. [江苏最低工资标准出炉](https://so.toutiao.com/search?keyword=江苏最低工资标准出炉)
 1. [记者：范志毅属于团队领导但不带队](https://so.toutiao.com/search?keyword=记者：范志毅属于团队领导但不带队)
-1. [男孩家门口滑倒 爷奶直接砸掉瓷砖](https://so.toutiao.com/search?keyword=男孩家门口滑倒+爷奶直接砸掉瓷砖)
 1. [租客退租房东不退押金称是行规](https://so.toutiao.com/search?keyword=租客退租房东不退押金称是行规)
 1. [今日起南方降雨迎来间歇期](https://so.toutiao.com/search?keyword=今日起南方降雨迎来间歇期)
-1. [耶伦游览北京故宫](https://so.toutiao.com/search?keyword=耶伦游览北京故宫)
-1. [小米汽车回应SU7充电问题](https://so.toutiao.com/search?keyword=小米汽车回应SU7充电问题)
-1. [小学生“打烟牌”该不该禁](https://so.toutiao.com/search?keyword=小学生“打烟牌”该不该禁)
 1. [A股三大指数收跌 黄金板块逆市走强](https://so.toutiao.com/search?keyword=A股三大指数收跌+黄金板块逆市走强)
 1. [美财长耶伦：不寻求与中国脱钩](https://so.toutiao.com/search?keyword=美财长耶伦：不寻求与中国脱钩)
 1. [青海柴达木发现大型金矿](https://so.toutiao.com/search?keyword=青海柴达木发现大型金矿)
@@ -96,7 +113,6 @@
 1. [55岁男子横漂23年想演电影](https://so.toutiao.com/search?keyword=55岁男子横漂23年想演电影)
 1. [媒体：菲当心被植入“特洛伊木马”](https://so.toutiao.com/search?keyword=媒体：菲当心被植入“特洛伊木马”)
 1. [提灯定损事件的违建房会拆除吗](https://so.toutiao.com/search?keyword=提灯定损事件的违建房会拆除吗)
-1. [抗癌女孩刘怡去世](https://so.toutiao.com/search?keyword=抗癌女孩刘怡去世)
 1. [女子将百万豪车送修却发现车被卖了](https://so.toutiao.com/search?keyword=女子将百万豪车送修却发现车被卖了)
 1. [郭麒麟一开口ktv都变味儿了](https://so.toutiao.com/search?keyword=郭麒麟一开口ktv都变味儿了)
 1. [伊拉克博主郑州吃面不断被“投喂”](https://so.toutiao.com/search?keyword=伊拉克博主郑州吃面不断被“投喂”)
