--- a/archives/toutiao-search/2024-04-08.md
+++ b/archives/toutiao-search/2024-04-08.md
@@ -1,48 +1,67 @@
 # 2024-04-08
 
-共 301 条
+共 314 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Apr 08 2024 18:00:59 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Apr 08 2024 19:00:35 GMT+0800 (China Standard Time) -->
 1. [南昌一公交撞上行人致3死7伤](https://so.toutiao.com/search?keyword=南昌一公交撞上行人致3死7伤)
 1. [足协所有中层干部暂时免去职务](https://so.toutiao.com/search?keyword=足协所有中层干部暂时免去职务)
 1. [港珠澳大桥现“春运式”景象](https://so.toutiao.com/search?keyword=港珠澳大桥现“春运式”景象)
+1. [如何引导孩子正确认识“烟牌”游戏](https://so.toutiao.com/search?keyword=如何引导孩子正确认识“烟牌”游戏)
 1. [网友：我倒要看看明年元旦怎么调休](https://so.toutiao.com/search?keyword=网友：我倒要看看明年元旦怎么调休)
-1. [踩商贩手的女城管被开除](https://so.toutiao.com/search?keyword=踩商贩手的女城管被开除)
-1. [浙江34岁律师遇袭身亡 系邻里纠纷](https://so.toutiao.com/search?keyword=浙江34岁律师遇袭身亡+系邻里纠纷)
-1. [砸奔驰大妈丈夫：骑电动车追3里地](https://so.toutiao.com/search?keyword=砸奔驰大妈丈夫：骑电动车追3里地)
 1. [浙大一女生23年前写的励志标语火了](https://so.toutiao.com/search?keyword=浙大一女生23年前写的励志标语火了)
-1. [4月10日将迎龙年龙月龙日龙时](https://so.toutiao.com/search?keyword=4月10日将迎龙年龙月龙日龙时)
-1. [警方通报蒜苗被轧大妈怒砸奔驰车](https://so.toutiao.com/search?keyword=警方通报蒜苗被轧大妈怒砸奔驰车)
+1. [专家：中美都希望稳定两国关系](https://so.toutiao.com/search?keyword=专家：中美都希望稳定两国关系)
+1. [盘点历史6次黄金牛市走势](https://so.toutiao.com/search?keyword=盘点历史6次黄金牛市走势)
+1. [重庆永川有电信诈骗园区？不实](https://so.toutiao.com/search?keyword=重庆永川有电信诈骗园区？不实)
+1. [砸奔驰大妈丈夫：骑电动车追3里地](https://so.toutiao.com/search?keyword=砸奔驰大妈丈夫：骑电动车追3里地)
+1. [虐猫考生疑未通过兰大面试 本人发声](https://so.toutiao.com/search?keyword=虐猫考生疑未通过兰大面试+本人发声)
+1. [南昌公交事故司机当时心脏不适失去意识](https://so.toutiao.com/search?keyword=南昌公交事故司机当时心脏不适失去意识)
+1. [《新闻联播》正在直播](https://so.toutiao.com/search?keyword=《新闻联播》正在直播)
 1. [女子在霸王茶姬脱光上衣坐柜台上](https://so.toutiao.com/search?keyword=女子在霸王茶姬脱光上衣坐柜台上)
+1. [王红权星自曝在一个小区有7套房](https://so.toutiao.com/search?keyword=王红权星自曝在一个小区有7套房)
+1. [几块黄瓜卖16元 店家：这是精品菜](https://so.toutiao.com/search?keyword=几块黄瓜卖16元+店家：这是精品菜)
+1. [浙江34岁律师遇袭身亡 系邻里纠纷](https://so.toutiao.com/search?keyword=浙江34岁律师遇袭身亡+系邻里纠纷)
+1. [记者：范志毅答应后可能翻脸了](https://so.toutiao.com/search?keyword=记者：范志毅答应后可能翻脸了)
+1. [警方通报蒜苗被轧大妈怒砸奔驰车](https://so.toutiao.com/search?keyword=警方通报蒜苗被轧大妈怒砸奔驰车)
+1. [4月10日将迎龙年龙月龙日龙时](https://so.toutiao.com/search?keyword=4月10日将迎龙年龙月龙日龙时)
+1. [网友吐槽五一调休：放不起就别放了](https://so.toutiao.com/search?keyword=网友吐槽五一调休：放不起就别放了)
+1. [直击今年唯一一次日全食](https://so.toutiao.com/search?keyword=直击今年唯一一次日全食)
+1. [以色列为何突然撤军](https://so.toutiao.com/search?keyword=以色列为何突然撤军)
+1. [菲律宾在南海投放特殊装置](https://so.toutiao.com/search?keyword=菲律宾在南海投放特殊装置)
+1. [金价暴涨房价下跌说明了什么](https://so.toutiao.com/search?keyword=金价暴涨房价下跌说明了什么)
+1. [住房“以旧换新”有哪些置换模式](https://so.toutiao.com/search?keyword=住房“以旧换新”有哪些置换模式)
+1. [男孩家门口滑倒 爷奶直接砸掉瓷砖](https://so.toutiao.com/search?keyword=男孩家门口滑倒+爷奶直接砸掉瓷砖)
+1. [钢铁煤炭价格为何跌惨了](https://so.toutiao.com/search?keyword=钢铁煤炭价格为何跌惨了)
+1. [拉夫罗夫抵京对中国进行正式访问](https://so.toutiao.com/search?keyword=拉夫罗夫抵京对中国进行正式访问)
+1. [山东一高校发生刑案致1死](https://so.toutiao.com/search?keyword=山东一高校发生刑案致1死)
+1. [小米汽车回应SU7充电问题](https://so.toutiao.com/search?keyword=小米汽车回应SU7充电问题)
+1. [中方：没有兴趣和任何国家比拼军力](https://so.toutiao.com/search?keyword=中方：没有兴趣和任何国家比拼军力)
+1. [中美财长会见 就多个议题交换意见](https://so.toutiao.com/search?keyword=中美财长会见+就多个议题交换意见)
+1. [马英九参观中国人民抗日战争纪念馆](https://so.toutiao.com/search?keyword=马英九参观中国人民抗日战争纪念馆)
+1. [网友吐槽银行取钱被要求证明是本人](https://so.toutiao.com/search?keyword=网友吐槽银行取钱被要求证明是本人)
+1. [女生发现一在建大楼几个柱子是歪的](https://so.toutiao.com/search?keyword=女生发现一在建大楼几个柱子是歪的)
+1. [官方回应昆明一局长被举报婚内出轨](https://so.toutiao.com/search?keyword=官方回应昆明一局长被举报婚内出轨)
+1. [节后“开门绿” A股为何又跌了](https://so.toutiao.com/search?keyword=节后“开门绿”+A股为何又跌了)
+1. [耶伦游览北京故宫](https://so.toutiao.com/search?keyword=耶伦游览北京故宫)
+1. [媒体：低龄不是恶性犯罪的免罪金牌](https://so.toutiao.com/search?keyword=媒体：低龄不是恶性犯罪的免罪金牌)
+1. [踩商贩手的女城管被开除](https://so.toutiao.com/search?keyword=踩商贩手的女城管被开除)
+1. [飞天茅台为什么大跌](https://so.toutiao.com/search?keyword=飞天茅台为什么大跌)
+1. [莫斯科恐袭嫌犯供出幕后协调人](https://so.toutiao.com/search?keyword=莫斯科恐袭嫌犯供出幕后协调人)
+1. [34岁律师遇袭身亡 2人被刑拘](https://so.toutiao.com/search?keyword=34岁律师遇袭身亡+2人被刑拘)
+1. [96年小伙与父亲闹矛盾露宿桥洞2年](https://so.toutiao.com/search?keyword=96年小伙与父亲闹矛盾露宿桥洞2年)
+1. [女孩看到英歌队后自信大方与其互动](https://so.toutiao.com/search?keyword=女孩看到英歌队后自信大方与其互动)
+1. [泰国拟设新签证一签可玩6国](https://so.toutiao.com/search?keyword=泰国拟设新签证一签可玩6国)
+1. [俄外长访华 中俄准备谈什么](https://so.toutiao.com/search?keyword=俄外长访华+中俄准备谈什么)
+1. [泽连斯基称乌战败其他国家也会遭袭](https://so.toutiao.com/search?keyword=泽连斯基称乌战败其他国家也会遭袭)
+1. [景区保安狂追孙悟空](https://so.toutiao.com/search?keyword=景区保安狂追孙悟空)
 1. [初中生被害案嫌犯最高可判什么刑](https://so.toutiao.com/search?keyword=初中生被害案嫌犯最高可判什么刑)
 1. [网传黑车司机打乘客系7名的哥互殴](https://so.toutiao.com/search?keyword=网传黑车司机打乘客系7名的哥互殴)
-1. [山东一高校发生刑案致1死](https://so.toutiao.com/search?keyword=山东一高校发生刑案致1死)
-1. [拉夫罗夫抵京对中国进行正式访问](https://so.toutiao.com/search?keyword=拉夫罗夫抵京对中国进行正式访问)
-1. [金价暴涨房价下跌说明了什么](https://so.toutiao.com/search?keyword=金价暴涨房价下跌说明了什么)
-1. [节后“开门绿” A股为何又跌了](https://so.toutiao.com/search?keyword=节后“开门绿”+A股为何又跌了)
-1. [俄外长访华 中俄准备谈什么](https://so.toutiao.com/search?keyword=俄外长访华+中俄准备谈什么)
 1. [央媒评初中生遇害案嫌疑人被追刑责](https://so.toutiao.com/search?keyword=央媒评初中生遇害案嫌疑人被追刑责)
-1. [马英九参观中国人民抗日战争纪念馆](https://so.toutiao.com/search?keyword=马英九参观中国人民抗日战争纪念馆)
-1. [网友吐槽五一调休：放不起就别放了](https://so.toutiao.com/search?keyword=网友吐槽五一调休：放不起就别放了)
-1. [飞天茅台为什么大跌](https://so.toutiao.com/search?keyword=飞天茅台为什么大跌)
-1. [泽连斯基称乌战败其他国家也会遭袭](https://so.toutiao.com/search?keyword=泽连斯基称乌战败其他国家也会遭袭)
-1. [以色列为何突然撤军](https://so.toutiao.com/search?keyword=以色列为何突然撤军)
-1. [小米汽车回应SU7充电问题](https://so.toutiao.com/search?keyword=小米汽车回应SU7充电问题)
-1. [菲律宾在南海投放特殊装置](https://so.toutiao.com/search?keyword=菲律宾在南海投放特殊装置)
-1. [莫斯科恐袭嫌犯供出幕后协调人](https://so.toutiao.com/search?keyword=莫斯科恐袭嫌犯供出幕后协调人)
-1. [女生发现一在建大楼几个柱子是歪的](https://so.toutiao.com/search?keyword=女生发现一在建大楼几个柱子是歪的)
-1. [盘点历史6次黄金牛市走势](https://so.toutiao.com/search?keyword=盘点历史6次黄金牛市走势)
 1. [男子试驾劳斯莱斯获销售暖心鼓励](https://so.toutiao.com/search?keyword=男子试驾劳斯莱斯获销售暖心鼓励)
-1. [中美财长会见 就多个议题交换意见](https://so.toutiao.com/search?keyword=中美财长会见+就多个议题交换意见)
-1. [王红权星自曝在一个小区有7套房](https://so.toutiao.com/search?keyword=王红权星自曝在一个小区有7套房)
 1. [妻子骗高位截瘫丈夫说送他去养老院](https://so.toutiao.com/search?keyword=妻子骗高位截瘫丈夫说送他去养老院)
-1. [钢铁煤炭价格为何跌惨了](https://so.toutiao.com/search?keyword=钢铁煤炭价格为何跌惨了)
-1. [34岁律师遇袭身亡 2人被刑拘](https://so.toutiao.com/search?keyword=34岁律师遇袭身亡+2人被刑拘)
 1. [河南平顶山多名执法人员与村民冲突](https://so.toutiao.com/search?keyword=河南平顶山多名执法人员与村民冲突)
 1. [日本拟加入AUKUS？外交部回应](https://so.toutiao.com/search?keyword=日本拟加入AUKUS？外交部回应)
 1. [没人续缴管理费骨灰会如何处置](https://so.toutiao.com/search?keyword=没人续缴管理费骨灰会如何处置)
-1. [中方：没有兴趣和任何国家比拼军力](https://so.toutiao.com/search?keyword=中方：没有兴趣和任何国家比拼军力)
 1. [抗癌女孩刘怡去世](https://so.toutiao.com/search?keyword=抗癌女孩刘怡去世)
 1. [女子机场上厕所被6岁男孩推门闯入](https://so.toutiao.com/search?keyword=女子机场上厕所被6岁男孩推门闯入)
 1. [贵州茅台回应茅台酒批价下跌](https://so.toutiao.com/search?keyword=贵州茅台回应茅台酒批价下跌)
@@ -51,9 +70,6 @@
 1. [小学生“打烟牌”该不该禁](https://so.toutiao.com/search?keyword=小学生“打烟牌”该不该禁)
 1. [男子进女厕偷窥被抓 母亲怒扇巴掌](https://so.toutiao.com/search?keyword=男子进女厕偷窥被抓+母亲怒扇巴掌)
 1. [陈奕迅演唱会被竖中指](https://so.toutiao.com/search?keyword=陈奕迅演唱会被竖中指)
-1. [南昌公交事故司机当时心脏不适失去意识](https://so.toutiao.com/search?keyword=南昌公交事故司机当时心脏不适失去意识)
-1. [耶伦游览北京故宫](https://so.toutiao.com/search?keyword=耶伦游览北京故宫)
-1. [男孩家门口滑倒 爷奶直接砸掉瓷砖](https://so.toutiao.com/search?keyword=男孩家门口滑倒+爷奶直接砸掉瓷砖)
 1. [海能达一字跌停](https://so.toutiao.com/search?keyword=海能达一字跌停)
 1. [英方妄称中国越来越好战 中方驳斥](https://so.toutiao.com/search?keyword=英方妄称中国越来越好战+中方驳斥)
 1. [大妈因蒜苗被轧怒砸奔驰或担刑责](https://so.toutiao.com/search?keyword=大妈因蒜苗被轧怒砸奔驰或担刑责)
@@ -61,7 +77,6 @@
 1. [耶伦两次访华带火三份菜单](https://so.toutiao.com/search?keyword=耶伦两次访华带火三份菜单)
 1. [高校回应招生副科长被举报聚众淫乱](https://so.toutiao.com/search?keyword=高校回应招生副科长被举报聚众淫乱)
 1. [中国养老金最大的问题是什么](https://so.toutiao.com/search?keyword=中国养老金最大的问题是什么)
-1. [官方回应昆明一局长被举报婚内出轨](https://so.toutiao.com/search?keyword=官方回应昆明一局长被举报婚内出轨)
 1. [奚梦瑶当街训斥老公何猷君](https://so.toutiao.com/search?keyword=奚梦瑶当街训斥老公何猷君)
 1. [江苏最低工资标准出炉](https://so.toutiao.com/search?keyword=江苏最低工资标准出炉)
 1. [记者：范志毅属于团队领导但不带队](https://so.toutiao.com/search?keyword=记者：范志毅属于团队领导但不带队)
@@ -80,9 +95,7 @@
 1. [载满俄士兵的战车撤退时遭乌军击中](https://so.toutiao.com/search?keyword=载满俄士兵的战车撤退时遭乌军击中)
 1. [曹德旺落子合肥项目开工 投资57亿](https://so.toutiao.com/search?keyword=曹德旺落子合肥项目开工+投资57亿)
 1. [韩国演员马东锡将于5月举办婚礼](https://so.toutiao.com/search?keyword=韩国演员马东锡将于5月举办婚礼)
-1. [女孩看到英歌队后自信大方与其互动](https://so.toutiao.com/search?keyword=女孩看到英歌队后自信大方与其互动)
 1. [落马贪官抚摸党旗崩溃痛哭](https://so.toutiao.com/search?keyword=落马贪官抚摸党旗崩溃痛哭)
-1. [媒体：低龄不是恶性犯罪的免罪金牌](https://so.toutiao.com/search?keyword=媒体：低龄不是恶性犯罪的免罪金牌)
 1. [小米SU7车险首年价格达6至8千元](https://so.toutiao.com/search?keyword=小米SU7车险首年价格达6至8千元)
 1. [记者：浓眉能出战湖人与勇士的比赛](https://so.toutiao.com/search?keyword=记者：浓眉能出战湖人与勇士的比赛)
 1. [老夫妇居家俩月用水1023吨](https://so.toutiao.com/search?keyword=老夫妇居家俩月用水1023吨)
